prodK8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recommendations
  labels:
    app.kubernetes.io/name: twc-recommendations
