prodK8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twc-recommendations
  namespace: recommendations
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:563515687788:certificate/5e60b630-ef93-4329-a86d-d76188c26ef8
spec:
  ingressClassName: alb
  rules:
    - host: recommendations.au-aws.thewishlist.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twc-recommendations
                port:
                  number: 80
